Temel görünümde arayüzler eklendi

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 apply from:"$project.rootDir/automation/gradle/versionCode.gradle"
-
 
 android {
     namespace 'com.grnt.bababrowser001'
@@ -326,6 +326,8 @@ dependencies {
     implementation Deps.androidx_compose_material
 
     implementation Deps.google_material
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
 
     androidTestImplementation Deps.uiautomator
     androidTestImplementation Deps.junit_ktx
@@ -355,10 +357,8 @@ dependencies {
     androidTestImplementation Deps.espresso_core, {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
