--- a/app/build.gradle
+++ b/app/build.gradle
@@ -328,6 +328,9 @@ dependencies {
     implementation Deps.google_material
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     androidTestImplementation Deps.uiautomator
     androidTestImplementation Deps.junit_ktx
