--- a/build.gradle
+++ b/build.gradle
@@ -73,11 +73,12 @@ allprojects {
             name "Mozilla"
             url "https://maven.mozilla.org/maven2"
 
-            content {
+           /* content {
                 // Never fetch components from here. We always want to use snapshots.
                 excludeGroup "org.mozilla.components"
-            }
+            }*/
         }
+
 
         if (project.hasProperty("centralRepo")) {
             maven {
