--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     buildFeatures {
         buildConfig true
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion = Versions.google_compose_compiler
